--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
         <div class="logo-text-container">
-            <img src="assets/img/global/logo-acesso-livre.png" alt="logo Acesso Livre" class="logo">
+            <img src="assets/img/global/acesso-livre-logo.svg" alt="logo Acesso Livre" class="logo">
             <span class="logo-text">Acesso Livre</span>
-            <img src="assets/img/global/logo-ifba.png" alt="logo IFBA" class="logo-ifba">
+            <img src="assets/img/global/LogoIFBA.svg" alt="logo IFBA" class="logo-ifba">
         </div>
 
 
