--- a/src/mapa/style.css
+++ b/src/mapa/style.css
@@ -467,17 +467,21 @@ h1 {
 }
 
 .comment-btn {
-  width: 100%;
-  padding: 16px;
-  background-color: #0a2a66;
-  color: #fff;
-  border: none;
-  font-size: 16px;
-  font-weight: 600;
-  border-radius: 16px;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(10, 42, 102, 0.2);
-  transition: all 0.3s ease;
+    width: 100%;
+    padding: 16px;
+    background-color: #0a2a66;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 16px;
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(10, 42, 102, 0.2);
+    transition: all 0.3s ease;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .comment-btn:hover {
