--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -92,10 +92,10 @@ body {
 }
 
 .logo {
-  width: 120px;
-  height: auto;
+  width: 30px;
+  height: 30px;
   margin-bottom: 20px;
-  display: block;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
 }
