Refactor project structure by moving map, auth, admin page to /pages, fixing broken paths and deleted duplicate page auth

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,14 +1,10 @@
 <header>
     <nav>
         <div class="logo-text-container">
-            <img src="/img/global/logo-acesso-livre.png" alt="logo Acesso Livre" class="logo">
+            <img src="assets/img/global/acesso-livre-logo.svg" alt="logo Acesso Livre" class="logo">
             <span class="logo-text">Acesso Livre</span>
             <img src="assets/img/global/LogoIFBA.svg" alt="logo IFBA" class="logo-ifba">
         </div>
-
-
-
-
     </nav>
 
     <!-- Modal Sobre -->
@@ -30,7 +26,7 @@
             <span class="close-btn" id="close-contact-modal">&times;</span>
             <h2>Contato</h2>
             <p>Telefone: (73) 99999-9999</p>
-            <p>Email: acessolivre@ifba.edu.br</p>
+            <p>Email: acessolivre&#64ifba.edu.br</p>
             <p>Caso tenha alguma sugestão, <a href="https://forms.google.com/example" target="_blank">use o
                     formulário</a>.</p>
         </div>
