--- a/src/pages/mapa/style.css
+++ b/src/pages/mapa/style.css
@@ -131,6 +131,22 @@ body {
   transform: scale(1.15);
 }
 
+.pin-with-label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pin-label {
+  padding: 2px 6px;
+  font-size: 12px;
+  border-radius: 6px;
+  margin-bottom: 4px;
+  font-weight: 600;
+  white-space: nowrap;
+  pointer-events: none;
+}
+
 .btn-map-custom {
   width: 50px;
   height: 50px;
